--- a/css/style.css
+++ b/css/style.css
@@ -2747,8 +2747,10 @@ footer {
                     align-items: center;
                     gap: 10px;
 
-                    i {
-                        font-size: 30px;
+                    img {
+                        width: 30px;
+                        height: 30px;
+                        border-radius: 50%;
                     }
 
                     p {
