--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -144,7 +144,7 @@ foreach ($dadosApi as $produto) {
                         <?php foreach ($dadosApi as $produto): ?>
 
 
-                            <div class="conteiner_produto" id="prod_<?= htmlspecialchars($produto->id_item) ?>">
+                            <div class="conteiner_produto" >
 
                                 <div class="imagem">
                                     <img src="paginas/validacoes/item/<?= htmlspecialchars($produto->foto) ?>" alt="<?= htmlspecialchars($produto->nome) ?>">
