--- a/paginas/pagamento.phtml
+++ b/paginas/pagamento.phtml
@@ -36,7 +36,7 @@
             </div>
 
             <div class="modelo">
-                <div class="parcela">
+                <div class="parcela ">
                     <label for="boleto"><i class="bi bi-credit-card-2-back-fill"></i> Boleto</label>
                     <p>O Pagamento Pode levar de 1 a 2 dias</p>
                 </div>
@@ -48,12 +48,13 @@
             <div id="produtoPreco" style="font-weight: bold !important;"></div>
 
             <div class="btn">
-                <a href="detalheProduto">Voltar</a>
+                <a href="home">Voltar</a>
                 <button type="submit">Concluir</button>
             </div>
         </form>
     </div>
 </section>
+
 
 
 <script src="JS/pagamento.js">
