--- a/paginas/pagamento.phtml
+++ b/paginas/pagamento.phtml
@@ -2,7 +2,7 @@
     <div class="conteiner_pagamento">
         <p class="text-center">Escolha sua forma de pagamento</p>
 
-        <form action="cartao" id="formPagamento" onsubmit="realizarPagamento(event)">
+        <form id="formPagamento" onsubmit="realizarPagamento(event)">
             <div class="modelo">
                 <div class="parcela">
                     <label for="creditocard"><i class="bi bi-credit-card-2-back-fill"></i> Cartão de Crédito</label>
@@ -14,9 +14,18 @@
                         </a>
 
                         <ul class="dropdown-menu">
-                            <li><input type="radio" id="parcela1" name="parcelas" value="1"><label for="parcela1">1X R$ 78.000,00</label></li>
-                            <li><input type="radio" id="parcela2" name="parcelas" value="2"><label for="parcela2">2X R$ 39.000,00</label></li>
-                            <li><input type="radio" id="parcela3" name="parcelas" value="3"><label for="parcela3">3X R$ 26.000,00</label></li>
+                            <li>
+                                <input type="radio" id="parcela1" name="parcelas" value="1">
+                                <label for="parcela1">1X R$ 78.000,00</label>
+                            </li>
+                            <li>
+                                <input type="radio" id="parcela2" name="parcelas" value="2">
+                                <label for="parcela2">2X R$ 39.000,00</label>
+                            </li>
+                            <li>
+                                <input type="radio" id="parcela3" name="parcelas" value="3">
+                                <label for="parcela3">3X R$ 26.000,00</label>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -36,7 +45,7 @@
             </div>
 
             <div class="modelo">
-                <div class="parcela ">
+                <div class="parcela">
                     <label for="boleto"><i class="bi bi-credit-card-2-back-fill"></i> Boleto</label>
                     <p>O Pagamento Pode levar de 1 a 2 dias</p>
                 </div>
@@ -54,7 +63,6 @@
         </form>
     </div>
 </section>
-
 
 
 <script src="JS/pagamento.js">
